# usajobs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cj_collect.py  collect.py  docker-compose.yml  parse_localities.py  pyproject.toml  schema.sql
.github/workflows/: ci.yml
backend/: config.py  db.py  main.py
backend/api/: commercial.py  config.py  filters.py  health.py  jobs.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  detail.js  filters.js  list.js
migrations/: 01_gs_equivalent.sql  02_refresh_jobs_geo.sql  03_jobs_geo_recency.sql  04_jobs_geo_application_open.sql  05_gs_equivalent_nongs_null.sql  06_jobs_geo_exclude_evergreen.sql  07_sighting_tracking.sql  08_commercial_schema.sql  09_commercial_indexes.sql  10_commercial_geo.sql  11_commercial_locality.sql  12_location_audit.sql
scripts/: analyze_jobs.py  load_geonames.py  usajobs-healthcheck.sh  verify_oconus.py
tests/: conftest.py  test_cj_collect.py  test_collect.py  test_commercial_api.py  test_filters.py  test_filters_more.py  test_health.py  test_infra.py  test_jobs_api.py  test_jobs_list.py  test_validation.py
tests/fixtures/: cj_detail_sample.html
